<resources>
    <string name="app_name">My Mobile Wallet</string>

    <!-- ========================================== -->
    <!-- Login                                      -->
    <!-- ========================================== -->

    <string name="login">Log In</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>

    <!-- ========================================== -->
    <!-- Main                                       -->
    <!-- ========================================== -->

    <string name="no_expenses">No saved expenses</string>

    <!-- ========================================== -->
    <!-- New expense                                     -->
    <!-- ========================================== -->

    <string name="hint_date">Date</string>
    <string name="hint_title">Title</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_description">Description</string>

    <string name="save">Save</string>
    <string name="new_expense">New expense</string>
    <string name="new_expense_successfully_added">Expense %s successfully added!</string>
    <string name="new_expense_unsuccessfully_added">New expense unsuccessfully added!</string>

    <string name="keep_me_logged_in">Keep me logged in</string>

    <string name="logout">Logout</string>
    <string name="summary">Summary</string>
    <string name="expense_details">Expense details</string>
    <string name="welcome">Welcome</string>

</resources>
